# django-federation-demo

./: docker-compose.yml
books_service/: Dockerfile  manage.py  pyproject.toml  schema.graphql
books_service/books/: schema.py  types.py
books_service/books/migrations/: 0001_initial.py
books_service/books_django/: asgi.py  settings.py  urls.py  wsgi.py
books_service/utils/management/commands/: generate_schema.py
reviews_service/: Dockerfile  manage.py  pyproject.toml
reviews_service/reviews/: models.py  schema.py  types.py
reviews_service/reviews/migrations/: 0001_initial.py
reviews_service/reviews_django/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
